--- a/index.html
+++ b/index.html
@@ -1,1 +1,57 @@
-a
+<!DOCTYPE html>
+<html lang="en-us">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1">
+    <link rel="stylesheet" href="style.css">
+    <title>
+        BalShop    
+    </title> 
+    
+</head>
+<body>
+    <div class="product-info">
+        <div class="product-text">
+            <h1>Potwór!!</h1>
+            <h2>Takie coś do picia.</h2>
+            <p>Miejmy nadzieję że jeszcze chłodne.</p>
+        </div>
+        <div class="product-price-btn">
+            <p><span>9</span>PLN</p>
+            <a  href="https://buy.stripe.com/14k6sje52bMV6Vq8ww">
+            <button type="button">KUPUJE</button>
+            </a>
+        </div>
+        </div>
+    </div>
+    </div>
+    </div>
+    <div class="product-info">
+        <div class="product-text">
+            <h1>Wiatraczek</h1>
+            <h2>Możesz wypożyczyć.</h2>
+            <p>10 min - 5 PLN</p>
+        </div>
+        <div class="product-price-btn">
+            <p><span>5</span>PLN</p>
+            <a href="https://buy.stripe.com/9AQ5of5ywcQZgw0bIL">
+            <button type="button">KUPUJE</button>
+            </a>
+        </div>
+        </div>
+    <div class="product-info">
+        <div class="product-text">
+            <h1>Kubek Lodu</h1>
+            <h2>100% wody w wodzie (zamrożone).</h2>
+            <p>Najlepszy lód w polsce.</p>
+        </div>
+        <div class="product-price-btn">
+            <p><span>5</span>PLN</p>
+            <a href="https://buy.stripe.com/4gw6sjgdabMVdjO8wx">
+            <button type="button">KUPUJE</button>
+            </a>
+        </div>
+        </div>
+</div>
+</div>
+</body>
