--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="product-info">
         <div class="product-text">
-            <h1>Potwór!!</h1>
+            <h1>Czerwony jak BYK!!</h1>
             <h2>Takie coś do picia.</h2>
             <p>Miejmy nadzieję że jeszcze chłodne.</p>
         </div>
@@ -52,6 +52,20 @@
             </a>
         </div>
         </div>
+    <div class="product-info">
+        <div class="product-text">
+            <h1>Losowy Baton</h1>
+            <h2>Mars? Snickers? Twix?</h2>
+            <p>Kto wie?</p>
+        </div>
+        <div class="product-price-btn">
+            <p><span>6</span>PLN</p>
+            <a href="https://buy.stripe.com/4gw6sjgdabMVdjO8wx">
+            <button type="button">KUPUJE</button>
+            </a>
+        </div>
+        </div>
+
 </div>
 </div>
 </body>
